apps/mealie/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - cook.lilalala.com
  rules:
    - backendRefs:
        - name: mealie
          port: 9000
      timeouts:
        request: 0s
